@@ -1,3 +1,9 @@
+2004-08-18  Peter Bienstman  <Peter.Bienstman@UGent.be>
+
+	* defs.h: Add switch for Davy.
+	* defs.cpp: Ditto.
+	* camfr_wrap.cpp: Ditto.
+
 2004-07-30  Peter Bienstman  <Peter.Bienstman@UGent.be>
 
 	* camfr_wrap.py: Add 'set_keep_all_estimates'.
